# gladAndGLFWWrapper

./: .gitignore  CMakeLists.txt  Makefile  README.md  basic.frag  basic.vert
externalLib/glad/include/glad/: glad.h
externalLib/glad/src/: glad.c
include/: GLContext.hpp  GLDebug.hpp  GLMesh.hpp  GLShader.hpp  GLShaderFile.hpp  GLShaderProgram.hpp  GLStructs.hpp  GLTexture.hpp  GLTimer.hpp  GLWindow.hpp  GladWrapper.hpp
src/: GLContext.cpp  GLMesh.cpp  GLShaderFile.cpp  GLShaderProgram.cpp  GLWindow.cpp  GladdWrapper.cpp  main.cpp
testLib/: Makefile  main.cpp
